--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon/favicon.ico" />
     <title>Sonntagsfilm</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
@@ -43,7 +43,7 @@
     style="background-color: #f6f6f6"
     style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif"
   >
-    <h1>Sonntagsfilm</h1>
+    <h1>Sonntagsfilm 1</h1>
     <p>
       Liebe:r [Name einfügen],<br />
       <br />
@@ -178,6 +178,5 @@
 
       newLink.click();
     };
-
   </script>
 </html>
